--- a/gmb-video/src/index.html
+++ b/gmb-video/src/index.html
@@ -18,6 +18,8 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--FontAwesome-->
   <script src="https://kit.fontawesome.com/22954fc981.js" crossorigin="anonymous"></script>
+  <!--Font-->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
